--- a/app-server/src/dev/mysql/conf/sonar.properties
+++ b/app-server/src/dev/mysql/conf/sonar.properties
@@ -1,8 +1,8 @@
 # MySql
-sonar.jdbc.url:                            jdbc:mysql://localhost:3306/sonar?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+sonar.jdbc.url:                            jdbc:mysql://localhost:3306/sonar_dev?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 sonar.jdbc.driverClassName:                com.mysql.jdbc.Driver
-sonar.jdbc.username:                           sonar
-sonar.jdbc.password:                       sonar
+sonar.jdbc.username:                       root
+sonar.jdbc.password:
 sonar.jdbc.maxActive:                      30
 sonar.jdbc.maxIdle:                        10
 sonar.jdbc.minIdle:                        2
