--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ docs/wiki/*.html
 application/sshapp/src/test/resources/data/export-data.xml
 application/sshapp/src/test/resources/data/default-data.xml
 examples/showcase/src/test/resources/data/export-data.xml
+
+app-server/src/main/webapp/deploy
