--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -321,6 +321,35 @@
           <skip>true</skip>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>7.1.4.v20100610</version>
+        <configuration>
+          <webAppConfig>
+            <contextPath>/dev</contextPath>
+            <descriptor>${basedir}/src/dev/web.xml</descriptor>
+          </webAppConfig>
+          <connectors>
+            <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+              <port>9001</port>
+              <maxIdleTime>60000</maxIdleTime>
+            </connector>
+          </connectors>
+
+          <stopPort>9966</stopPort>
+          <stopKey>foo</stopKey>
+          <scanIntervalSeconds>5</scanIntervalSeconds>
+          <systemProperties>
+            <systemProperty>
+              <name>sonar.home</name>
+              <value>${project.build.directory}/sonar-dev-home</value>
+            </systemProperty>
+          </systemProperties>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 
@@ -354,29 +383,6 @@
           <plugin>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
-            <version>7.1.0.v20100505</version>
-            <configuration>
-              <webAppConfig>
-                <contextPath>/dev</contextPath>
-                <descriptor>${basedir}/src/dev/web.xml</descriptor>
-              </webAppConfig>
-              <connectors>
-                <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                  <port>9001</port>
-                  <maxIdleTime>60000</maxIdleTime>
-                </connector>
-              </connectors>
-
-            <stopPort>9966</stopPort>
-            <stopKey>foo</stopKey>
-            <scanIntervalSeconds>5</scanIntervalSeconds>
-              <systemProperties>
-                <systemProperty>
-                  <name>sonar.home</name>
-                  <value>${project.build.directory}/sonar-dev-home</value>
-                </systemProperty>
-              </systemProperties>
-            </configuration>
           </plugin>
         </plugins>
       </build>
