--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -153,7 +153,6 @@
     </dependency>
   </dependencies>
 
-
   <build>
     <resources>
       <resource>
@@ -185,6 +184,7 @@
         </configuration>
       </plugin>
       <plugin>
+        <!-- 拷贝sill-colorizer 的 sonar-colorizer.css 文件 -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <executions>
@@ -209,6 +209,7 @@
         </executions>
       </plugin>
       <plugin>
+        <!-- 拷贝webapp 到target/xx/ -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
         <executions>
@@ -230,6 +231,7 @@
         </executions>
       </plugin>
       <plugin>
+        <!-- 压缩所需js，合成为 sonar.js -->
         <groupId>net.sf.alchim</groupId>
         <artifactId>yuicompressor-maven-plugin</artifactId>
         <version>0.7.1</version>
